{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 14,
  "lineage": "6af1699a-4895-6c37-e475-af4b72521784",
  "resources": [
    {
      "module": "module.nagios",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-0a4843bafdc2e44c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4843bafdc2e44c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "minhachavepessoal",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0133d123c3ebb12ef",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-100-24-107-169.compute-1.amazonaws.com",
            "public_ip": "100.24.107.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09188625f2734aa5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0950448ef293c78d4",
            "tags": {
              "Name": "Nagios"
            },
            "tags_all": {
              "Name": "Nagios"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-055a30de5c74ba408"
            ]
          },
          "dependencies": [
            "module.sg_nagios.aws_security_group.sgmain",
            "module.vpca.aws_subnet.vpc-public-0",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.node_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:549454439016:instance/i-0023380c8ed624513",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0023380c8ed624513",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "minhachavepessoal",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-090631e677de48f46",
            "private_dns": "ip-10-0-0-16.ec2.internal",
            "private_ip": "10.0.0.16",
            "public_dns": "ec2-44-192-39-10.compute-1.amazonaws.com",
            "public_ip": "44.192.39.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076702a9486cf8357",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0950448ef293c78d4",
            "tags": {
              "Name": "Node_a"
            },
            "tags_all": {
              "Name": "Node_a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-055a30de5c74ba408"
            ]
          },
          "dependencies": [
            "module.sg_nagios.aws_security_group.sgmain",
            "module.vpca.aws_subnet.vpc-public-0",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_nagios",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgmain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:security-group/sg-055a30de5c74ba408",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055a30de5c74ba408",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_vpc_10_public-sg_vpc_10_public",
            "name_prefix": "",
            "owner_id": "549454439016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Work Nagios Security Group",
              "Terraform": "true",
              "ambiente": "sg_vpc_10_public",
              "app": "sg_vpc_10_public",
              "kubernetes.io/cluster/eks-finnet": "shared",
              "modalidade": "sg_vpc_10_public",
              "projeto": "sg_vpc_10_public"
            },
            "tags_all": {
              "Name": "Work Nagios Security Group",
              "Terraform": "true",
              "ambiente": "sg_vpc_10_public",
              "app": "sg_vpc_10_public",
              "kubernetes.io/cluster/eks-finnet": "shared",
              "modalidade": "sg_vpc_10_public",
              "projeto": "sg_vpc_10_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051713757c9a8ed9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:internet-gateway/igw-0e07124b506adb026",
            "id": "igw-0e07124b506adb026",
            "owner_id": "549454439016",
            "tags": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "Work IGW",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            },
            "tags_all": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "Work IGW",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            },
            "vpc_id": "vpc-0051713757c9a8ed9"
          },
          "dependencies": [
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:route-table/rtb-04e62eafde5bc23ff",
            "id": "rtb-04e62eafde5bc23ff",
            "owner_id": "549454439016",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e07124b506adb026",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Public Route Table",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "tags_all": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Public Route Table",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "vpc_id": "vpc-0051713757c9a8ed9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpca.aws_internet_gateway.vpc-gw",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-dmz-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008746e671ef3df1e",
            "route_table_id": "rtb-04e62eafde5bc23ff",
            "subnet_id": "subnet-0950448ef293c78d4"
          },
          "dependencies": [
            "module.vpca.aws_internet_gateway.vpc-gw",
            "module.vpca.aws_route_table.route-dmz",
            "module.vpca.aws_subnet.vpc-public-0",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-public-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:subnet/subnet-0950448ef293c78d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0950448ef293c78d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549454439016",
            "tags": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Public Subnet",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "tags_all": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Public Subnet",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "vpc_id": "vpc-0051713757c9a8ed9"
          },
          "dependencies": [
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549454439016:vpc/vpc-0051713757c9a8ed9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e05595473e69d418",
            "default_route_table_id": "rtb-00fdbfefb49860292",
            "default_security_group_id": "sg-09abd69de4536822b",
            "dhcp_options_id": "dopt-36ba9f4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0051713757c9a8ed9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00fdbfefb49860292",
            "owner_id": "549454439016",
            "tags": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "work-vpc",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            },
            "tags_all": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "work-vpc",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            }
          }
        }
      ]
    }
  ]
}